Submenu hover area changed.

--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -144,6 +144,8 @@
          & > ul {
             display: none;
             height: 30px;
+            width: 1000px;
+            overflow: hidden;
             background-color: $subnMenuBackbround;
             position: absolute;
             left: 0;
